# stellar-zk-proof-of-reserves

./: .gitignore  DEPLOYMENTS.md  README.md
contracts/proof-of-reserves/: Cargo.toml
contracts/proof-of-reserves/src/: lib.rs
por/: journal.hex  proof.txt  viewkey.hex
por/host/: Cargo.toml
por/host/src/: main.rs
por/methods/: Cargo.toml
por/methods/guest/: Cargo.toml
por/methods/guest/src/: main.rs
scripts/: auditor_decrypt.py  demo_fast.sh  merkle_proof.py  prove_insolvent.sh  run_demo.sh
web/: index.html
